HF: get_attention_weights script cleanup

--- a/demos/demo-tf-hmm-factorization-transformer.config
+++ b/demos/demo-tf-hmm-factorization-transformer.config
@@ -239,7 +239,7 @@ max_seqs = 10  # TODO: 100
 chunking = "0"
 truncation = -1
 #gradient_clip = 10
-#gradient_nan_inf_filter = True  # TODO: for some reason RETURNN cannot have this set to true when in_loop
+gradient_nan_inf_filter = True  # TODO: for some reason RETURNN cannot have this set to true when in_loop
 adam = True
 gradient_noise = 0.3
 learning_rate = 0.0005
