--- a/demos/demo-tf-hmm-factorization-rnn-firstorder.config
+++ b/demos/demo-tf-hmm-factorization-rnn-firstorder.config
@@ -93,7 +93,7 @@ network = {
 		             "n_out": num_outputs#['classes'][0]
 		             },
 
-}, "target": "classes", "max_seq_len": "max_len_from('base:encoder') * 3", "optimize_move_layers_out": False},
+}, "target": "classes", "max_seq_len": "max_len_from('base:encoder') * 3", "optimize_move_layers_out": True},
 
 "decision": {
     "class": "decide", "from": ["output"], "loss": "edit_distance", "target": "classes",
