--- a/demos/demo-tf-hmm-factorization-transformer.config
+++ b/demos/demo-tf-hmm-factorization-transformer.config
@@ -14,8 +14,8 @@ print("Hello, experiment: %s" % demo_name)
 
 # task
 use_tensorflow = True
-#task = "train"
-task = "search"
+task = "train"
+#task = "search"
 
 # data
 #train = {"class": "TaskEpisodicCopyDataset", "num_seqs": 100}
