--- a/demos/demo-tf-hmm-factorization-transformer.config
+++ b/demos/demo-tf-hmm-factorization-transformer.config
@@ -189,21 +189,21 @@ class TransformerNetwork:
                      "prev_outputs": "prev:target_embed_raw",
                      "top_k": 5,
                      "n_out": num_outputs,
-                     "debug": False,
+                     "debug": True,
                      "tie_embedding_weights": "target_embed_raw",
-                     #"sample_softmax": 2,
                      #"window_size": 10,  # TODO: remove
                      #"window_factor": 5, # TODO: remove
                      #"attention_location": None, #"/work/smt2/makarov/returnn-hmm/demos/dump",
                      "transpose_and_average_att_weights": True,
                      "target": "classes",
-                     "loss": "ce",
-                     #"sample_method": "learned_unigram",
-                     #"loss": "hmm_factorization_sampled_loss",
-                     #"loss_opts": { "num_sampled": 2},
+                     #"loss": "ce",
+                     "sample_softmax": 2,
+                     "sample_method": "learned_unigram",
+                     "loss": "hmm_factorization_sampled_loss",
+                     "loss_opts": { "num_sampled": 2},
                      },
 
-            }, "target": "classes", "max_seq_len": "max_len_from('base:encoder') * 3", "optimize_move_layers_out": True},  # TODO: set correct
+            }, "target": "classes", "max_seq_len": "max_len_from('base:encoder') * 3", "optimize_move_layers_out": False},  # TODO: set correct
 
             "decision": {
                 "class": "decide", "from": ["output"], "loss": "edit_distance", "target": "classes",
@@ -239,7 +239,7 @@ max_seqs = 10  # TODO: 100
 chunking = "0"
 truncation = -1
 #gradient_clip = 10
-gradient_nan_inf_filter = True  # TODO: for some reason RETURNN cannot have this set to true when in_loop
+#gradient_nan_inf_filter = True  # TODO: for some reason RETURNN cannot have this set to true when in_loop
 adam = True
 gradient_noise = 0.3
 learning_rate = 0.0005
