HF: cleanup in_loop

--- a/demos/demo-tf-hmm-factorization-transformer.config
+++ b/demos/demo-tf-hmm-factorization-transformer.config
@@ -190,7 +190,7 @@ class TransformerNetwork:
                      "top_k": 5,
                      "n_out": num_outputs,
                      "debug": True,
-                     "tie_embedding_weights": "target_embed_raw",
+                     #"tie_embedding_weights": "target_embed_raw",
                      #"window_size": 10,  # TODO: remove
                      #"window_factor": 5, # TODO: remove
                      #"attention_location": None, #"/work/smt2/makarov/returnn-hmm/demos/dump",
