HF: cleanup in_loop

--- a/demos/demo-tf-hmm-factorization-transformer.config
+++ b/demos/demo-tf-hmm-factorization-transformer.config
@@ -191,8 +191,8 @@ class TransformerNetwork:
                      "n_out": num_outputs,
                      "debug": True,
                      #"tie_embedding_weights": "target_embed_raw",
-                     #"window_size": 10,  # TODO: remove
-                     #"window_factor": 5, # TODO: remove
+                     "window_size": 10,  # TODO: remove
+                     "window_factor": 5, # TODO: remove
                      #"attention_location": None, #"/work/smt2/makarov/returnn-hmm/demos/dump",
                      "transpose_and_average_att_weights": True,
                      "target": "classes",
@@ -203,7 +203,7 @@ class TransformerNetwork:
                      "loss_opts": { "num_sampled": 2},
                      },
 
-            }, "target": "classes", "max_seq_len": "max_len_from('base:encoder') * 3", "optimize_move_layers_out": False},  # TODO: set correct
+            }, "target": "classes", "max_seq_len": "max_len_from('base:encoder') * 3", "optimize_move_layers_out": True},  # TODO: set correct
 
             "decision": {
                 "class": "decide", "from": ["output"], "loss": "edit_distance", "target": "classes",
