--- a/demos/demo-tf-hmm-factorization-transformer.config
+++ b/demos/demo-tf-hmm-factorization-transformer.config
@@ -181,6 +181,7 @@ class TransformerNetwork:
                 "decoder": {"class": "layer_norm", "from": ["dec_%02d" % self.decN]},
 
                 # HMM Factorization
+                "prev_prev_state_transformed": {"class": "copy", "from": ["prev:decoder"]},
 
                 "output_prob" : {"class": "hmm_factorization",
                      "attention_weights": "dec_%02d_att_weights" % (self.decN),
@@ -190,14 +191,17 @@ class TransformerNetwork:
                      "top_k": 5,
                      "n_out": num_outputs,
                      "debug": True,
+                     "first_order_alignments": True,
+                     "prev_prev_state": "prev_prev_state_transformed",
                      #"tie_embedding_weights": "target_embed_raw",
-                     "window_size": 10,  # TODO: remove
-                     "window_factor": 5, # TODO: remove
+                     #"window_size": 10,  # TODO: remove
+                     #"window_factor": 5, # TODO: remove
                      #"attention_location": None, #"/work/smt2/makarov/returnn-hmm/demos/dump",
                      "transpose_and_average_att_weights": True,
                      "target": "classes",
                      #"loss": "ce",
                      "sample_softmax": 2,
+                     "threshold": 0.5,
                      "sample_method": "learned_unigram",
                      "loss": "hmm_factorization_sampled_loss",
                      "loss_opts": { "num_sampled": 2},
