--- a/demos/demo-tf-hmm-factorization-transformer.config
+++ b/demos/demo-tf-hmm-factorization-transformer.config
@@ -190,7 +190,7 @@ class TransformerNetwork:
                      "prev_outputs": "prev:target_embed_raw",
                      "top_k": 5,
                      "n_out": num_outputs,
-                     "debug": True,
+                     "debug": False,
                      "first_order_alignments": True,
                      "prev_prev_state": "prev_prev_state_transformed",
                      #"tie_embedding_weights": "target_embed_raw",
@@ -204,7 +204,8 @@ class TransformerNetwork:
                      "threshold": 0.5,
                      "sample_method": "learned_unigram",
                      "loss": "hmm_factorization_sampled_loss",
-                     "loss_opts": { "num_sampled": 2},
+                     "loss_opts": { "num_sampled": 2
+                        },
                      },
 
             }, "target": "classes", "max_seq_len": "max_len_from('base:encoder') * 3", "optimize_move_layers_out": True},  # TODO: set correct
