HF: random head

--- a/demos/demo-tf-hmm-factorization-transformer-random.config
+++ b/demos/demo-tf-hmm-factorization-transformer-random.config
@@ -15,7 +15,7 @@ print("Hello, experiment: %s" % demo_name)
 # task
 use_tensorflow = True
 task = "train"
-in_loop = True  # IMPORTANT: SET THIS TO TRUE IN SEARCH, FALSE IN TRAIN <-----------------------------------------------
+in_loop = False  # IMPORTANT: SET THIS TO TRUE IN SEARCH, FALSE IN TRAIN <-----------------------------------------------
 
 # data
 train = {"class": "TaskEpisodicCopyDataset", "num_seqs": 100}
@@ -36,18 +36,33 @@ intermediary_size = 100
 def select_random_layer_and_head(sources, in_loop):
     import tensorflow as tf
 
+    # TODO: update this
+    # TODO: each input is of shape? [B, H, I, J]??
+
     # First select layer
-    sources = tf.stack(sources, axis=0)  # [layer, B, I, H, J]
-    sources = tf.gather(sources, tf.random.shuffle(tf.range(tf.shape(sources)[0])))
+    print(sources)
+    sources = tf.stack(sources, axis=0)  # [layer, B, H, (I,) J]
+    sources = tf.gather(sources, tf.random_shuffle(tf.range(tf.shape(sources)[0])))
     layer_to_use = sources[0]
+    print(layer_to_use)
 
     # Select head
-    layer_to_use = tf.transpose(layer_to_use, perm=[2, 0, 1, 3])
-    layer_to_use = tf.gather(layer_to_use, tf.random.shuffle(tf.range(tf.shape(layer_to_use)[0])))
+    if in_loop:
+        att_perm = [1, 0, 2]
+    else:
+        att_perm = [1, 0, 2, 3]
+
+    layer_to_use = tf.transpose(layer_to_use, perm=att_perm)  # TODO: something is not right
+    print(layer_to_use)
+    layer_to_use = tf.gather(layer_to_use, tf.random_shuffle(tf.range(tf.shape(layer_to_use)[0])))
     head_to_use = layer_to_use[0]
+
+    print(head_to_use)
 
     if not in_loop:
         head_to_use = tf.expand_dims(head_to_use, axis=-2)
+
+    print(head_to_use)  # TODO: should be then [B, (I,), 1, J]
 
     return head_to_use
 
@@ -199,10 +214,13 @@ class TransformerNetwork:
                 "att_selector": {"class": "eval", "from": ["dec_01_att_weights", "dec_02_att_weights", "dec_03_att_weights", "dec_04_att_weights",
                                                       "dec_05_att_weights", "dec_06_att_weights"],
                                   "eval": "self.network.get_config().typed_value('select_random_layer_and_head')([source(i) for i in range(6)], self.network.get_config().bool('in_loop', False))",
-                                  "out_type": {"dim": 1 if in_loop else None, "shape": (None, 1) if in_loop else (None, 1, None), "size_placeholder": {0: 1}}},
+                                  "n_out": 1,
+                                  "out_type": {"feature_dim_axis": 1,
+                                               "shape": (1, None)},
+                                  },
+                                  #"out_type": {"dim": 1, "shape": (1, None) if in_loop else (1, None, None), "size_placeholder": {0: 1}}},
 
                 # HMM Factorization
-
                 "output_prob" : {"class": "hmm_factorization",
                      "attention_weights": "att_selector",
                      "base_encoder_transformed": "base:encoder",
@@ -211,16 +229,17 @@ class TransformerNetwork:
                      "top_k": 5,
                      "n_out": num_outputs,
                      "debug": True,
-                     "tie_embedding_weights": "target_embed_raw",
-                     "sample_softmax": 2,
+                     #"tie_embedding_weights": "target_embed_raw",
+                     #"sample_softmax": 2,
                      #"window_size": 10,  # TODO: remove
                      #"window_factor": 5, # TODO: remove
-                     "attention_location": None, #"/work/smt2/makarov/returnn-hmm/demos/dump",
+                     #"attention_location": None, #"/work/smt2/makarov/returnn-hmm/demos/dump",
                      "transpose_and_average_att_weights": False,
                      "target": "classes",
+                     "loss": "ce",
                      #"sample_method": "learned_unigram",
-                     "loss": "hmm_factorization_sampled_loss",
-                     "loss_opts": { "num_sampled": 2}
+                     #"loss": "hmm_factorization_sampled_loss",
+                     #"loss_opts": { "num_sampled": 2}
                      },
 
             }, "target": "classes", "max_seq_len": "max_len_from('base:encoder') * 3", "optimize_move_layers_out": not in_loop},  # TODO: set correct
