HF: working on random head

--- a/demos/demo-tf-hmm-factorization-transformer.config
+++ b/demos/demo-tf-hmm-factorization-transformer.config
@@ -190,7 +190,7 @@ class TransformerNetwork:
                      "prev_outputs": "prev:target_embed_raw",
                      "top_k": 5,
                      "n_out": num_outputs,
-                     "debug": False,
+                     "debug": True,
                      "first_order_alignments": True,
                      "prev_prev_state": "prev_prev_state_transformed",
                      #"tie_embedding_weights": "target_embed_raw",
@@ -199,13 +199,13 @@ class TransformerNetwork:
                      #"attention_location": None, #"/work/smt2/makarov/returnn-hmm/demos/dump",
                      "transpose_and_average_att_weights": True,
                      "target": "classes",
-                     #"loss": "ce",
-                     "sample_softmax": 2,
-                     "threshold": 0.5,
-                     "sample_method": "learned_unigram",
-                     "loss": "hmm_factorization_sampled_loss",
-                     "loss_opts": { "num_sampled": 2
-                        },
+                     "loss": "ce",
+                     #"sample_softmax": 2,
+                     #"threshold": 0.5,
+                     #"sample_method": "learned_unigram",
+                     #"loss": "hmm_factorization_sampled_loss",
+                     #"loss_opts": { "num_sampled": 2
+                     #   },
                      },
 
             }, "target": "classes", "max_seq_len": "max_len_from('base:encoder') * 3", "optimize_move_layers_out": True},  # TODO: set correct
