--- a/demos/demo-tf-transformer.config
+++ b/demos/demo-tf-transformer.config
@@ -17,12 +17,12 @@ use_tensorflow = True
 task = "train"
 
 # data
-#train = {"class": "TaskEpisodicCopyDataset", "num_seqs": 100}
-#num_inputs = 10
-#num_outputs = 10
-train = {"class": "TaskXmlModelingDataset", "num_seqs": 100}
-num_inputs = 12
-num_outputs = 12
+train = {"class": "TaskEpisodicCopyDataset", "num_seqs": 100}
+num_inputs = 10
+num_outputs = 10
+#train = {"class": "TaskXmlModelingDataset", "num_seqs": 100}
+#num_inputs = 12
+#num_outputs = 12
 
 #train = {"class": "Task12AXDataset", "num_seqs": 100}
 #num_inputs = 9
@@ -185,7 +185,7 @@ class TransformerNetwork:
                      "loss": "ce",
                      },
 
-            }, "target": "classes", "max_seq_len": "max_len_from('base:encoder') * 3", "optimize_move_layers_out": False},  # TODO: set correct
+            }, "target": "classes", "max_seq_len": "max_len_from('base:encoder') * 3", "optimize_move_layers_out": True},  # TODO: set correct
 
             "decision": {
                 "class": "decide", "from": ["output"], "loss": "edit_distance", "target": "classes",
